# cfet_tcad

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  windows-exe.yml  windows-nuitka.yml
configs/: cfet_2d.yaml  cfet_2d_sige.yaml  cfet_3d.yaml  cfet_idvd_2d.yaml  cfet_vtc_2d.yaml  gaa_nfet_3d.yaml  nsheet_nfet_2d.yaml  nsheet_nfet_2d_dg.yaml  nsheet_nfet_2d_full.yaml  nsheet_nfet_2d_lombardi.yaml  nsheet_nfet_idvd_2d.yaml  nsheet_pfet_2d.yaml  paper_fbc_cfet_3d.yaml  paper_fbc_cfet_demo.step  paper_fbc_cfet_demo_import.yaml  paper_fbc_cfet_demo_run.yaml  paper_fbc_lombardi_cfet_3d.yaml  paper_sbc31_cfet_3d.yaml  paper_sbc_cfet_3d.yaml  paper_sbc_cfet_demo.step  paper_sbc_cfet_demo_import.yaml  paper_sbc_cfet_demo_run.yaml  paper_sbc_lombardi_cfet_3d.yaml
docs/: DEV_PLANS_ARCHIVE.md  PROJECT_DEV_PLAN.md  code_review_2026-07.md  dev_plan_code_review_p0p1.md  dev_plan_fig4_step_demo.md  dev_plan_gui_dpi_layout.md  dev_plan_gui_experiment_edit_filepanes.md  dev_plan_gui_progress_stop_delete.md  dev_plan_gui_single_window_rework.md  dev_plan_llm_optimizer.md  dev_plan_manual_about_copyright.md  dev_plan_multi_channel_cfet.md  dev_plan_paper_cfet_comparison.md  dev_plan_sbc_step_demo.md  dev_plan_step_import.md  dev_plan_windows_exe_configs_bundling.md  dev_plan_windows_exe_doctor_tempfile_fix.md  paper_comparison.md  paper_fig489_notes.md
examples/: make_paper_fig4_step.py  make_paper_sbc_step.py  paper_cfet_comparison.py  paper_structure_mobility_figures.py  paraview_macro_fig8.py  run_idvd.py  run_idvg.py
packaging/: cfet_tcad.spec  entry_cli.py  entry_gui.py  entry_nuitka.py
src/cfet_tcad/: __init__.py
src/cfet_tcad/extract/: __init__.py  figures_of_merit.py
src/cfet_tcad/geometry/: __init__.py  base.py  cfet_2d.py  cfet_3d.py  external.py  gaa_3d.py  nanosheet_2d.py  params.py  step_import.py
src/cfet_tcad/gui/: __init__.py  about_dialog.py  app.py  config_form.py  experiment_table.py  help_view.py  icon.py  log_console.py  main_window.py  (+7 more)
tests/: conftest.py  test_bootstrap.py  test_cfet.py  test_cfet_3d.py  test_config.py  test_experiments_e2e.py  test_external_mesh.py  test_extract.py  test_gaa_3d.py  test_geometry.py  test_gui.py  test_lombardi.py  test_materials.py  test_mesh_loading.py  test_optimize_claude_provider.py  test_optimize_gui_dialog.py  test_optimize_llm_provider.py  test_optimize_objective.py  test_optimize_orchestrator.py  test_optimize_prompt.py  test_optimize_schema.py  test_quantum.py  test_render3d.py  test_solve_smoke.py  test_step_import.py  test_sweep.py  test_vtc.py
(+33 files in other folders)
