[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cfet-tcad"
version = "0.1.0"
description = "Open-source CFET / nanosheet TCAD simulation system built on DEVSIM + gmsh, with VTK output for VisIt"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "devsim>=2.10",
    "gmsh>=4.11",
    "numpy",
    "scipy",
    "matplotlib",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest"]
gui = ["PySide6-Essentials"]

[project.scripts]
cfet-tcad = "cfet_tcad.workflow.cli:main"
cfet-tcad-gui = "cfet_tcad.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: runs a full simulation pipeline (several seconds or more)"]
